cmake_minimum_required(VERSION 3.14)
project(HashTable)
include(CTest)
enable_testing()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lgcov --coverage")
add_executable(HashTableTests tests/HashTableChaining.Tests.cpp tests/HashTableOpenAddress.Tests.cpp tests/PerfectHashTable.Tests.cpp)
target_link_libraries(HashTableTests PRIVATE gtest_main gtest pthread)
add_test(NAME AllTests COMMAND HashTableTests)